--- a/gb/21/2/13/n12750239.md
+++ b/gb/21/2/13/n12750239.md
@@ -19,49 +19,38 @@
 <p>前总统办公室发表该声明之后不久，众议院于1月25日晚些时候向参议院提出一项<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%B9%E5%8A%BE.md#1">弹劾</a>指控。民主党人的这个罪名为“煽动叛乱”的指控称，川普应对煽动叛乱负责，这场叛乱导致一群人在1月6日闯入美国国会大厦。</p>
 <p>责任编辑：叶紫微#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/30/n12513194.md#1">组图：川普佛州竞选集会 梅拉尼娅演说支持</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/4/n12524154.md#1">组图：参加竞选活动 梅拉尼娅优雅着装现身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/9/n12536197.md#1">梅拉尼娅劝川普认输？陆网民斥官媒传假新闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/17/n12627629.md#1">组图：疫情难阻 梅拉尼娅访问儿童医院</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/2/11/n12746214.md#1">反对二次弹劾川普 CIA前官员退出民主党</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/2/11/n12746331.md#1">罢免纽森概率增 曾获川普背书富商参选加州州长</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/2/11/n12747720.md#1">格雷厄姆：更多参议员将投票反对给川普定罪</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/2/11/n12747747.md#1">拜登政府搁置川普政府微信禁令上诉程序</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11646873.md#1" target="_blank">中共暴政录：最奇葩的战争——战胜国送出国土</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11282738.md#1" target="_blank">纽约11位国会议员褒奖法轮大法</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/7/23/n2974541.md#1" target="_blank">鲜为人知的马克思之五：自私的马克思</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067845.md#1">【杨延昭传奇】乱世中的命定姻缘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074352.md#1">【全球新闻】日本外相履新 首场记者会剑指中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074606.md#1">【新闻大破解】共军出事了？台应防王沪宁圈套</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074637.md#1">【马克时空】摧毁登陆舰潜艇 海王星成打击利器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073386.md#1">【中国观察】王沪宁画饼 习政策进死胡同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073339.md#1">王友群：中共即将灭亡最重要的原因是什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073943.md#1">李尚福等接连“消失” 白宫记者会关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074253.md#1">婚前偕女友飞俄国古堡 徐新洋遵传统访女方家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073251.md#1">王宝强前经纪人宋喆刑满出狱 再引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073240.md#1">刘嘉玲曾自曝有洁癖 友人做客被网民提醒一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074019.md#1">周杰伦携昆凌为妈妈庆生 婆媳贴脸合照似母女</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073677.md#1">婚姻生活逾40年 丹佐华盛顿谈秘诀：承诺与信仰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068199.md#1">不让近视恶化！每天只花5分钟 改善视力很简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073027.md#1">木制厨具6大好处 了解后你会爱不释手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072719.md#1">从现代医学看传统美食 豆腐健康吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073638.md#1">如何对抗头发稀疏？ 专家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061508.md#1">更年期障碍从何来 该如何自我保健缓解症状？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136486.md#1">【百年真相】不满“大撒币”王稼祥全家挨整</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137097.md#1">【晚间新闻】美众院警告中共：停止跨国镇压</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137357.md#1">【舞蹈三剑客】2024神韵巡演在即 三剑客久违的Q&#038;A</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135229.md#1">周海媚病历曝光事件发酵 北京警方介入</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135452.md#1">专家分析：中共疫苗与周海媚之死疑云</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135792.md#1">购置日本地产 大批中国富人资产“润”出</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134986.md#1">被爆猝逝前失联4小时 港星周海媚死因成谜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135057.md#1">港片《灯火阑珊》竞逐奥斯卡资格遭撤 原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：强力搅拌器 节日优惠高达65%</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/13/n12750239.htm">梅拉尼娅?川普宣布创设个人办公室</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/2/13/n12750239.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
