--- a/gb/21/1/18/n12696586.md
+++ b/gb/21/1/18/n12696586.md
@@ -11,7 +11,7 @@
 	<p>【大纪元2021年01月19日讯】（英文大纪元记者Zachary Stieber报导／高杉编译）美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%80%E5%A4%AB%E4%BA%BA.md#1">第一夫人</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A2%85%E6%8B%89%E5%B0%BC%E5%A8%85.md#1">梅拉尼娅</a>?<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E6%9C%97%E6%99%AE.md#1">特朗普</a>）1月18日在发布预先录制的告别视频中表示，能够担任<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%AC%AC%E4%B8%80%E5%A4%AB%E4%BA%BA.md#1">第一夫人</a>对她来说是一种荣耀。</p>
 <p>她说：“我的美国同胞们，能够成为美国第一夫人是我一生中最大的荣耀。我受到全国各地令人难以置信的美国人的鼓舞，他们通过自己的善良、勇气、慷慨和仁慈提升了我们的社区。过去的四年是令人难忘的。”</p>
 <p>&nbsp;</p>
-<p><center><a src=""></a><a href="https://d2p9r31ubb8t81.cloudfront.net/H6mXP7hNg"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/SfgMd1Og2Ck" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>今年50岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A2%85%E6%8B%89%E5%B0%BC%E5%A8%85.md#1">梅拉尼娅</a>?<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>是斯洛文尼亚人，2005年与唐纳德?川普总统结婚。第二年，她生下了他们的儿子巴伦（Barron）。</p>
+<p><center><a src=""></a><a href="https://d3vg08phoazui6.cloudfront.net/E8uXP7hNm"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/SfgMd1Og2Ck" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>今年50岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A2%85%E6%8B%89%E5%B0%BC%E5%A8%85.md#1">梅拉尼娅</a>?<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>是斯洛文尼亚人，2005年与唐纳德?川普总统结婚。第二年，她生下了他们的儿子巴伦（Barron）。</p>
 <p>梅拉尼娅还补充道：“当我和唐纳德结束我们在白宫的时光回家时，我会把所有的人装在心中，包括他们关于爱、爱国主义和决心的不可思议的故事。”</p>
 <p>“我看到勇敢的年轻士兵们，他们眼中充满的自豪告诉我，他们是多么热爱为这个国家服务。对于每一位现役人员和我们不可思议的军属家庭：你们是英雄，我永远为你们祈祷。我想到了所有的执法人员，他们在我们到达的任何地方迎接我们。每一天的每一个小时，他们都在保卫我们的社区安全，我们永远感激他们。”</p>
 <p>“我被在医院和寄养中心探望过的孩子们所感动。即使在他们与疾病抗争或面临挑战的时候，他们也会给每个遇到的人带来快乐。我记得那些与阿片类药物成瘾疾病做斗争的母亲们，为了爱她们的孩子而克服了难以置信的困难。我受到了那些对新生儿戒断综合症（Neonatal Abstinence Syndrome）患儿尽心尽力照顾者的鼓舞，也受到了那些给予这些孩子成长所需的支持和照顾的社区的鼓舞。当我想到这些有意义的经历时，我为有机会代表一个拥有如此善良和慷慨人民的国家而感到自豪。”</p>
@@ -24,44 +24,37 @@
 <p>责任编辑：叶紫微?#</p>
 	
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/30/n12513194.md#1">组图：川普佛州竞选集会 梅拉尼娅演说支持</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/4/n12524154.md#1">组图：参加竞选活动 梅拉尼娅优雅着装现身</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/11/9/n12536197.md#1">梅拉尼娅劝川普认输？陆网民斥官媒传假新闻</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/17/n12627629.md#1">组图：疫情难阻 梅拉尼娅访问儿童医院</a></li>
-<hr>
-
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/22/n10656949.md#1" target="_blank">胡健：少年反革命</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li><hr>
-
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/6/n10695964.md#1" target="_blank">林辉：五四运动“第一烈士”是历史的赝品</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067845.md#1">【杨延昭传奇】乱世中的命定姻缘（中）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074352.md#1">【全球新闻】日本外相履新 首场记者会剑指中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074606.md#1">【新闻大破解】共军出事了？台应防王沪宁圈套</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074637.md#1">【马克时空】摧毁登陆舰潜艇 海王星成打击利器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073386.md#1">【中国观察】王沪宁画饼 习政策进死胡同</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073339.md#1">王友群：中共即将灭亡最重要的原因是什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073943.md#1">李尚福等接连“消失” 白宫记者会关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074253.md#1">婚前偕女友飞俄国古堡 徐新洋遵传统访女方家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073251.md#1">王宝强前经纪人宋喆刑满出狱 再引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073240.md#1">刘嘉玲曾自曝有洁癖 友人做客被网民提醒一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074019.md#1">周杰伦携昆凌为妈妈庆生 婆媳贴脸合照似母女</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073677.md#1">婚姻生活逾40年 丹佐华盛顿谈秘诀：承诺与信仰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068199.md#1">不让近视恶化！每天只花5分钟 改善视力很简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073027.md#1">木制厨具6大好处 了解后你会爱不释手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14072719.md#1">从现代医学看传统美食 豆腐健康吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14073638.md#1">如何对抗头发稀疏？ 专家教你几招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061508.md#1">更年期障碍从何来 该如何自我保健缓解症状？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136486.md#1">【百年真相】不满“大撒币”王稼祥全家挨整</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137097.md#1">【晚间新闻】美众院警告中共：停止跨国镇压</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137357.md#1">【舞蹈三剑客】2024神韵巡演在即 三剑客久违的Q&#038;A</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135229.md#1">周海媚病历曝光事件发酵 北京警方介入</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135452.md#1">专家分析：中共疫苗与周海媚之死疑云</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135792.md#1">购置日本地产 大批中国富人资产“润”出</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134986.md#1">被爆猝逝前失联4小时 港星周海媚死因成谜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135057.md#1">港片《灯火阑珊》竞逐奥斯卡资格遭撤 原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：强力搅拌器 节日优惠高达65%</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/18/n12696586.htm">梅拉尼娅：担任第一夫人是一生最大荣耀</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/21/1/18/n12696586.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
